<resources>
    <string name="app_name">Company App</string>
    <string name="job_seeker">Job Seeker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_dream_job_is_waiting_for_you_find_it_and_stay_updated">Your dream job is waiting for you! Find it and stay updated!</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="track_your_application_easily_evaluate_and_get_jobs_faster">Track your application easily. evaluate and get jobs faster!</string>
    <string name="sending_applications_for_many_types_of_jobs_with_just_one_click">Sending applications for many types of jobs with just one click.</string>
    <string name="get_started">Get Started</string>
    <string name="joby">Joby.</string>
    <string name="create_account">Create Account</string>
    <string name="please_fill_in_the_form_below_to_create_an_account_easy_isn_t_it">Please fill in the form below to create an account. Easy isn\'t it?</string>
    <string name="your_full_name">Your full name</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="login">Login</string>
    <string name="it_is_quick_and_easy_to_log_in_enter_your_email_and_password_below">It is quick and easy to log in. Enter your email and password below.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="i_don_t_have_an_account">I don’t have an account</string>
    <string name="login_with_google">Login with Google</string>
    <string name="or">Or</string>
    <string name="what_job_are_you_looking_for">What job are you looking for?</string>
    <string name="enter_job_name">Enter job name</string>
    <string name="ui_designer">UI Designer</string>
    <string name="ui_ux">UI/UX</string>
    <string name="product_designer">Product Designer</string>
    <string name="designer">Designer</string>
    <string name="graphic_designer">Graphic Designer</string>
    <string name="where_are_your_preferred_locations">Where are your preferred locations?</string>
    <string name="enter_location">Enter location</string>
    <string name="remote">Remote</string>
    <string name="indonesia">Indonesia</string>
    <string name="jakarta">Jakarta</string>
    <string name="kuala_lumpur">Kuala Lumpur</string>
    <string name="singapore">Singapore</string>
    <string name="philiphines">Philiphines</string>
    <string name="your_account_has_been_set_up">Your account has been set up!</string>
    <string name="we_have_customized_feeds_according_to_your_preferences">We have customized feeds according to your preferences.</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="please_enter_your_email_address_and_we_will_send_you_instructions_about_changing_your_password">Please enter your email address, and we will send you instructions about changing your password.</string>
    <string name="back_to_login">Back to Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="your_new_password_must_be_different_from_previous_used_password">Your new password must be different from previous used password.</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="saved">Saved</string>
    <string name="home">Home</string>
    <string name="applied">Applied</string>
    <string name="q_a"><![CDATA[Q & A]]></string>
    <string name="profile">Profile</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="david_richardson">David Richardson!</string>
    <string name="search_job_name_or_company">Search job name or company</string>
    <string name="job_type">Job Type</string>
    <string name="full_time">Full Time</string>
    <string name="full_time_singapore">Full Time . Singapore</string>
    <string name="full_time_remote">Full Time . Remote</string>
    <string name="location">Location</string>
    <string name="search_job">Search Job</string>
    <string name="complete_your_profile">Complete Your Profile!</string>
    <string name="it_is_required_to_submit_an_application">It is required to submit an application</string>
    <string name="suggested_jobs">Suggested Jobs</string>
    <string name="see_all">See all</string>
    <string name="sr_ui_ux_designer">Sr. UI/UX Designer</string>
    <string name="tripadvisor_in_california">Tripadvisor, in California</string>
    <string name="product_researcher">Product Researcher</string>
    <string name="airbnb_in_singapore">Airbnb, in Singapore</string>
    <string name="part_time">Part-Time</string>
    <string name="onsite">Onsite</string>
    <string name="ux_researcher_intern">UX Researcher Intern</string>
    <string name="zapier_in_new_york">Zapier, in New York</string>
    <string name="notification">Notification</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="new_word">New</string>
    <string name="gojek_indonesia">Gojek Indonesia</string>
    <string name="posted_new_design_jobs">Posted new design jobs</string>
    <string name="just_now">Just Now</string>
    <string name="zapier">Zapier</string>
    <string name="notify_time">15.35</string>
    <string name="notify_time2">12.45</string>
    <string name="yesterday">Yesterday</string>
    <string name="application_rejected">Application rejected :(</string>
    <string name="your_application">Your application \"UI/UX Designer\" for Airbnb was rejected</string>
    <string name="your_application_passes_to_the_next_stage">Your application "Graphic Designer" passes to the next stage</string>
    <string name="your_application_passed">Your application passed</string>
    <string name="treehouse">Treehouse</string>
    <string name="nov_15_2022">Nov 15, 2022</string>
    <string name="there_are_no_notifications">There are no notifications</string>
    <string name="front_end_dev">Front-End Dev</string>
    <string name="saved_searches">Saved Searches</string>
    <string name="developer">Developer</string>
    <string name="front_end_developer">Front End Developer</string>
    <string name="full_stack_developer">Full Stack Developer</string>
    <string name="experience_level">Experience Level</string>
    <string name="showing_14_576_results">Showing 14,576 Results</string>
    <string name="jr_front_end_designer">Jr. Front-End Designer</string>
    <string name="kickstarter_in_manchester">Kickstarter, in Manchester</string>
    <string name="posted_6_hours_ago">Posted 6 hours ago</string>
    <string name="could_not_find">Could not find \"Front-End Develpper\"</string>
    <string name="please_double_check_if_there_is_a_typo_or_try_another_keyword">Please double check if there is a typo or try another keyword.</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="sort_by">Sort By</string>
    <string name="most_recent">Most Recent</string>
    <string name="most_relevant">Most Relevant</string>
    <string name="any">Any</string>
    <string name="freelance">Freelance</string>
    <string name="contract">Contract</string>
    <string name="usa">USA</string>
    <string name="japan">Japan</string>
    <string name="south_korea">South Korea</string>
    <string name="canada">Canada</string>
    <string name="add_location">Add Location</string>
    <string name="senior">Senior</string>
    <string name="entry_level">Entry Level</string>
    <string name="associate">Associate</string>
    <string name="director">Director</string>
    <string name="executive">Executive</string>
    <string name="internship">Internship</string>
    <string name="date_posted">Date Posted</string>
    <string name="any_time">Any Time</string>
    <string name="past_week">Past Week</string>
    <string name="past_24h">Past 24h</string>
    <string name="past_month">Past Month</string>
    <string name="on_site_remote">On-Site/Remote</string>
    <string name="on_site">On-Site</string>
    <string name="hybrid">Hybrid</string>
    <string name="salary">Salary</string>
    <string name="minimum_1_000">Minimum: $1,000</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="open_your_email">Open your email</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_morbi_dolor_nisi">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dolor nisi.</string>
    <string name="open_email_app">Open Email App</string>
    <string name="get_job_alerts_for_this_search">Get job alerts for this search</string>
    <string name="drichardson19_gmail_com">drichardson19@gmail.com</string>
    <string name="number_12">12</string>
    <string name="number_6">6</string>
    <string name="number_4">4</string>
    <string name="shortlisted">Shortlisted</string>
    <string name="interview">Interview</string>
    <string name="offer">Offer</string>
    <string name="general">General</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="application_profile">Application Profile</string>
    <string name="language">Language</string>
    <string name="security_settings">Security Settings</string>
    <string name="other">Other</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="help_center">Help Center</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="review_joby_on_app_store">Review Joby on App Store</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="davidrichard_com">davidrichard.com</string>
    <string name="number_44">+44</string>
    <string name="_2184756212">2184756212</string>
    <string name="_4517_washington_ave_manchester_kentucky_39495">4517 Washington Ave. Manchester, Kentucky 39495</string>
    <string name="save">Save</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="cv_pdf">CV.pdf</string>
    <string name="portfolio_pdf">. Portfolio.pdf</string>
    <string name="profile_name">Profile Name</string>
    <string name="upload_curriculum_vitae">Upload Curriculum Vitae</string>
    <string name="upload">Upload</string>
    <string name="upload_other_file_ex_portfolio">Upload Other File (Ex: Portfolio)</string>
    <string name="delete">Delete</string>
    <string name="add_profile">Add Profile</string>
    <string name="english">English</string>
    <string name="job">Job</string>
    <string name="your_job_search_alerts">Your Job Search Alerts</string>
    <string name="job_application_update">Job Application Update</string>
    <string name="job_application_reminders">Job Application Reminders</string>
    <string name="job_you_may_be_interested_in">Job You May be Interested In</string>
    <string name="message">Message</string>
    <string name="all_message">All Message</string>
    <string name="company_name">Company Name</string>
    <string name="post_new_job">Post new job</string>
    <string name="enter_job_type">Enter Job Type</string>
    <string name="enter_job_location">Enter Job Location</string>
    <string name="enter_salary">$</string>
    <string name="post">Post</string>
    <string name="company_login">Company Login</string>
    <string name="enter_job_address">Enter Job Address</string>
    <string name="address">Address</string>
    <string name="enter_company_name">Enter Company Name</string>
</resources>