<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="10dp"
    android:background="@drawable/application_profile_bg"
    android:paddingVertical="20dp"
    android:paddingHorizontal="15dp">

<TextView
    android:id="@+id/tvProfileName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/ui_ux_designer"
    android:textSize="16sp"
    android:textColor="#222741"
    android:fontFamily="@font/manrope"
    android:textFontWeight="600"
    android:letterSpacing="0.1"
    tools:targetApi="p" />

<TextView
    android:id="@+id/profile_subtext_cv_pdf"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/cv_pdf"
    android:textSize="14sp"
    android:textColor="#75788D"
    android:layout_marginTop="22dp"
    android:fontFamily="@font/manrope"
    android:textFontWeight="600"
    android:letterSpacing="0.1"
    tools:targetApi="p" />

<TextView
    android:id="@+id/profile_subtext_portfolio_pdf"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/portfolio_pdf"
    android:textSize="14sp"
    android:textColor="#75788D"
    android:layout_marginStart="60dp"
    android:layout_marginTop="22dp"
    android:fontFamily="@font/manrope"
    android:textFontWeight="600"
    android:letterSpacing="0.1"
    tools:targetApi="p" />

<ImageView
    android:id="@+id/edit"
    android:layout_width="25dp"
    android:layout_height="25dp"
    android:layout_marginTop="18dp"
    android:layout_alignParentEnd="true"
    android:src="@drawable/edit"
    android:contentDescription="@string/application_profile"
    />

</RelativeLayout>
