<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".company.CompanyForgetPasswordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/joby"
        android:textColor="#2355C4"
        android:fontFamily="@font/manrope"
        android:textFontWeight="800"
        android:layout_marginStart="15dp"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        tools:targetApi="p" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass"
        android:textColor="#222741"
        android:fontFamily="@font/manrope"
        android:lineHeight="40dp"
        android:textFontWeight="800"
        android:layout_marginStart="15dp"
        android:textSize="28sp"
        android:layout_marginTop="20dp"
        tools:targetApi="p" />

    <TextView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_your_email_address_and_we_will_send_you_instructions_about_changing_your_password"
        android:textColor="#75788D"
        android:fontFamily="@font/manrope"
        android:lineHeight="24dp"
        android:textFontWeight="400"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        tools:targetApi="p" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fp_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email_address"
        android:fontFamily="@font/manrope"
        android:textColorHint="#75788D"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/back_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_login"
        android:textColor="#2355C4"
        android:fontFamily="@font/manrope"
        android:lineHeight="24dp"
        android:textFontWeight="600"
        android:textSize="16sp"
        android:layout_marginTop="330dp"
        android:textAlignment="center"
        tools:targetApi="p" />

    <Button
        android:id="@+id/reset_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:fontFamily="@font/manrope"
        android:textSize="16sp"
        android:textFontWeight="600"
        android:backgroundTint="#2355C4"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        tools:targetApi="p"
        />


</LinearLayout>
